vlib/v/checker/tests/comptime_value_d_values_can_only_be_pure_literals.vv
const my_f32 = $d('my_f32', f32(42.0))
